Changement dans l'architecture du cache du bot !
Création d'un cache plus puissant. Reste encore beaucoup d'erreur.

Je patcherais ça d'ici peu !